pkg/topology/state/fixtures/ingress/v1.18-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myIngress_v1beta1
  namespace: myns
spec:
  ingressClassName: myIngressClass
  backend:
    serviceName: myService
    servicePort: 443
  rules:
    - host: foo.bar
      http:
        paths:
          - path: /foobar
            pathType: Prefix
            backend:
              serviceName: myService
              servicePort: 443
  tls:
    - hosts:
        - foo.com
      secretName: mySecret
status:
  loadBalancer:
    ingress:
      - ip: 1.2.3.4
        hostname: foo.bar
        ports:
          - port: 8080
            protocol: TCP
